# evalgate

./: .gitignore  PROGRESS.md  README.md  ROADMAP.md  gatecheck.config.yaml  lmeval.config.yaml  pyproject.toml
.github/workflows/: evals.yml
baselines/: default.json
docs/example-run/: README.md  dashboard.html  hard-suites-claude-judge.md  hard-suites-dashboard.html  hard-suites-local-judge.md  hard-suites-transcripts.jsonl  hard-suites.md  summary.md  transcripts.jsonl
evalgate/: __init__.py  cli.py  gate.py  report.py  runner.py
evalgate/graders/: pairwise.py
evalgate/providers/: base.py
gatecheck/: __init__.py  cache.py  cli.py  report.py  runner.py  types.py
gatecheck/graders/: __init__.py  llm_judge.py
gatecheck/providers/: _http.py  bedrock.py  ollama.py
lmeval/: __init__.py  cli.py  pricing.py  report.py  runner.py  suite.py  types.py
lmeval/graders/: __init__.py  deterministic.py  llm_judge.py
lmeval/providers/: __init__.py  anthropic.py  openai.py
suites/: classification.yaml  faithfulness.yaml  preference.yaml  red-team.yaml  structured-output.yaml  summarization.yaml  tool-use.yaml
tests/: test_cache.py  test_cli.py  test_e2e.py  test_gate.py  test_graders.py  test_http_retry.py  test_pricing.py  test_providers.py  test_report.py  test_runner.py  test_suite.py
