[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-eval-harness"
version = "0.1.0"
description = "Provider-agnostic LLM evaluation harness: task suites, deterministic + LLM-as-judge graders, regression gating, and cost/latency tracking."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "requests>=2.31",
  "pyyaml>=6.0",
  "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
lmeval = "lmeval.cli:main"

[tool.setuptools.packages.find]
include = ["lmeval*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
